--- a/composer.json
+++ b/composer.json
@@ -5,10 +5,11 @@
 	"homepage": "https://codeigniter.com",
 	"license": "MIT",
 	"require": {
-		"php": "^7.3||^8.0",
-		"codeigniter4/framework": "^4",
+		"php": "^8.1",
+		"codeigniter4/framework": "4.5.8.0",
 		"denis303/codeigniter4-recaptcha": "dev-master",
-		"dompdf/dompdf": "^1.0"
+		"dompdf/dompdf": "2.0.4.0",
+		"spatie/string": "^2.2"
 	},
 	"require-dev": {
 		"fakerphp/faker": "^1.9",
